Mobile menu & overflow-x fix

--- a/tailwind/custom/base.css
+++ b/tailwind/custom/base.css
@@ -25,7 +25,10 @@
 }
 
 body {
-	@apply font-primary overflow-x-hidden;
+	@apply font-primary;
+}
+main {
+	@apply !overflow-x-hidden w-screen;
 }
 
 .animate__initial {
